# ratatui-code-editor

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
examples/editor/: Cargo.toml
examples/editor/src/: main.rs
examples/half/: Cargo.toml
examples/half/src/: main.rs
examples/lsp/: Cargo.toml
examples/lsp/src/: main.rs
examples/marks/: Cargo.toml
examples/marks/src/: main.rs
examples/minimal/: Cargo.toml
examples/minimal/src/: main.rs
examples/split/: Cargo.toml
examples/split/src/: main.rs
src/: actions.rs  code.rs  code_logos.rs  editor.rs  editor_crossterm.rs  lib.rs  python_logos.rs  render.rs  rust_logos.rs  selection.rs  theme.rs  tree_sitter_languages.rs  utils.rs
