[package]
name = "ratatui-code-editor"
version = "0.1.0"
edition = "2024"
authors = ["vipmax"]
description = "ratatui-code-editor is A code editor widget for ratatui, built with syntax highlighting powered by Tree-sitter."
license = "MIT"
readme = "README.md"
homepage = "https://github.com/vipmax/ratatui-code-editor"
repository = "https://github.com/vipmax/ratatui-code-editor.git"
keywords = ["ratatui", "terminal", "editor", "tree-sitter"]
categories = ["command-line-interface", "text-editors"]
exclude = [".anycode/*", "Cargo.toml.orig"]

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true

[workspace]
members = [
    ".",
#    "examples/minimal",
#    "examples/editor",
#    "examples/half",
#    "examples/split",
#    "examples/marks",
#    "examples/lsp",
]

[workspace.dependencies]
ratatui-code-editor = { path = ".", features = ["crossterm", "tree-sitter-languages"] }
anyhow = "^1.0"
crossterm = "~0.29"
ratatui = "~0.30"

[dependencies]
anyhow = "^1.0"
ratatui-core = "~0.1.0"
crossterm = { version = "~0.29", optional = true }
ropey = "^1.6"
rust-embed = { version = "^8.7", features = ["include-exclude"] }
streaming-iterator = "~0.1"
unicode-width = "~0.2"
unicode-segmentation = "^1.12"
arboard = { version = "^3.5", default-features = false, optional = true }
logos = "0.16.1"

[features]
default = ["crossterm", "arboard"]
crossterm = [
    "dep:crossterm"
]
arboard = [
    "dep:arboard"
]
